// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Framework ESLint Integration > should lint Angular test file > angular-errors 1`] = `
[
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "db-accordion-item must be used inside db-accordion",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "db-accordion-item must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 69,
    "endLine": 6,
    "line": 6,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 94,
    "endLine": 10,
    "line": 10,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 51,
    "endLine": 14,
    "line": 14,
    "message": "db-notification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 60,
    "endLine": 15,
    "line": 15,
    "message": "db-notification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 43,
    "endLine": 18,
    "line": 18,
    "message": "db-drawer-header must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 43,
    "endLine": 18,
    "line": 18,
    "message": "db-drawer-header must be used inside db-drawer (in slot "header")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 58,
    "endLine": 19,
    "line": 19,
    "message": "db-custom-select must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 47,
    "endLine": 22,
    "line": 22,
    "message": "db-drawer must have a DBDrawerHeader for accessibility (provides close button and aria-labelledby)",
    "messageId": "drawerHeaderRequired",
    "ruleId": "db-ux/drawer-header-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 53,
    "endLine": 25,
    "line": 25,
    "message": "db-drawer-header must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 53,
    "endLine": 25,
    "line": 25,
    "message": "db-drawer-header must be used inside db-drawer (in slot "header")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 53,
    "endLine": 26,
    "line": 26,
    "message": "db-drawer-footer must be used inside db-drawer (in slot "footer")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 61,
    "endLine": 27,
    "line": 27,
    "message": "db-navigation-item must be used inside db-navigation or db-navigation-item (in slot "subNavigation")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 61,
    "endLine": 27,
    "line": 27,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 68,
    "endLine": 28,
    "line": 28,
    "message": "db-tab-list must be used inside db-tabs",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 43,
    "endLine": 29,
    "line": 29,
    "message": "db-tab-panel must be used inside db-tabs",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 3,
    "endLine": 34,
    "line": 30,
    "message": "db-table-head must be used inside db-table",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 3,
    "endLine": 39,
    "line": 35,
    "message": "db-table-body must be used inside db-table",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 3,
    "endLine": 44,
    "line": 40,
    "message": "db-table-footer must be used inside db-table",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 3,
    "endLine": 47,
    "line": 45,
    "message": "db-table-row must be used inside db-table-head or db-table-body or db-table-footer",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 58,
    "endLine": 48,
    "line": 48,
    "message": "db-table-header-cell must be used inside db-table-row",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 54,
    "endLine": 49,
    "line": 49,
    "message": "db-table-data-cell must be used inside db-table-row",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 52,
    "endLine": 50,
    "line": 50,
    "message": "db-table-caption must be used inside db-table (in slot "caption")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 35,
    "endLine": 61,
    "line": 61,
    "message": "db-input must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 62,
    "endLine": 64,
    "line": 64,
    "message": "db-input with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 2,
    "endColumn": 25,
    "endLine": 67,
    "line": 67,
    "message": "DBHeader must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "ruleId": "db-ux/header-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 23,
    "endLine": 78,
    "line": 76,
    "message": "db-navigation-item must be used inside db-navigation or db-navigation-item (in slot "subNavigation")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 23,
    "endLine": 78,
    "line": 76,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 15,
    "endLine": 83,
    "line": 81,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 15,
    "endLine": 83,
    "line": 81,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 33,
    "endLine": 88,
    "line": 88,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 94,
    "line": 94,
    "message": "Use icon attribute instead of DBIcon child in db-button",
    "messageId": "preferAttribute",
    "ruleId": "db-ux/prefer-icon-attribute",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 94,
    "line": 94,
    "message": "db-icon must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 44,
    "endLine": 98,
    "line": 98,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 40,
    "endLine": 101,
    "line": 101,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 62,
    "endLine": 105,
    "line": 105,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Angular test file > angular-fixed 1`] = `
"<div>
	<!-- db-ux/accordion-item-headline-required -->
	<db-accordion-item></db-accordion-item>

	<!-- db-ux/badge-corner-placement-rules -->
	<db-badge placement="corner-top-right" label="9999">9999</db-badge>

	<!-- db-ux/badge-no-inline-in-interactive -->
	<db-button type="submit">
		<db-badge placement="corner-top-right" label="Inline in button">Inline in button</db-badge>
	</db-button>

	<!-- db-ux/close-button-text-required -->
	<db-notification closeable>Test</db-notification>
	<db-notification [closeable]="true">Test</db-notification>
	<db-notification [closeable]="false">Test</db-notification>
	<db-notification>Test</db-notification>
	<db-drawer-header>Test</db-drawer-header>
	<db-custom-select [label]="'Select'"></db-custom-select>

	<!-- db-ux/drawer-header-required -->
	<db-drawer>Content without header</db-drawer>

	<!-- db-ux/sub-component-required-parent -->
	<db-drawer-header>Outside drawer</db-drawer-header>
	<db-drawer-footer>Outside drawer</db-drawer-footer>
	<db-navigation-item>Outside navigation</db-navigation-item>
	<db-tab-list><db-tab-item>Outside tabs</db-tab-item></db-tab-list>
	<db-tab-panel>Outside tabs</db-tab-panel>
	<db-table-head
		><db-table-row
			><db-table-header-cell>H</db-table-header-cell></db-table-row
		></db-table-head
	>
	<db-table-body
		><db-table-row
			><db-table-data-cell>D</db-table-data-cell></db-table-row
		></db-table-body
	>
	<db-table-footer
		><db-table-row
			><db-table-data-cell>F</db-table-data-cell></db-table-row
		></db-table-footer
	>
	<db-table-row
		><db-table-data-cell>Outside section</db-table-data-cell></db-table-row
	>
	<db-table-header-cell>Outside row</db-table-header-cell>
	<db-table-data-cell>Outside row</db-table-data-cell>
	<db-table-caption>Outside table</db-table-caption>

	<!-- db-ux/button-no-text-requires-tooltip -->
	<db-button type="submit" noText icon="search">Test
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/button-type-required -->
	<db-button type="submit">Missing type</db-button>
	<db-button type="button">Valid button</db-button>

	<!-- db-ux/form-label-required -->
	<db-input type="text"></db-input>

	<!-- db-ux/form-validation-message-required -->
	<db-input [label]="'Email'" required type="text"></db-input>

	<!-- db-ux/header-burger-menu-label-required -->
	<db-header></db-header>

	<!-- db-ux/input-type-required -->
	<db-input [label]="'Test'" type="text"></db-input>

	<!-- db-ux/link-external-security -->
	<db-link href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">External link</db-link>

	<!-- db-ux/navigation-item-back-button-text-required -->
	<db-navigation-item>
		<div slot="subNavigation">Sub nav</div>
	</db-navigation-item>

	<!-- db-ux/no-interactive-tooltip-content -->
	<db-tooltip>
		<db-button type="button">Click</db-button>
	</db-tooltip>

	<!-- db-ux/no-nested-accordion -->
	<db-accordion>
		<db-accordion-item headlinePlain="Test">
			<db-accordion></db-accordion>
		</db-accordion-item>
	</db-accordion>

	<!-- db-ux/prefer-icon-attribute -->
	<db-button type="submit">
		<db-icon icon="search"></db-icon>
	</db-button>

	<!-- db-ux/select-requires-options -->
	<db-select [label]="'Select'"></db-select>

	<!-- db-ux/tag-removable-remove-button-required -->
	<db-tag behavior="removable"></db-tag>

	<!-- db-ux/tooltip-requires-interactive-parent -->
	<div>
		<db-tooltip>Tooltip without interactive parent</db-tooltip>
	</div>
</div>
"
`;

exports[`Framework ESLint Integration > should lint React test file > react-errors 1`] = `
[
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 35,
    "line": 35,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 35,
    "line": 35,
    "message": "DBAccordionItem must be used inside DBAccordion",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 35,
    "line": 35,
    "message": "DBAccordionItem must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 30,
    "endLine": 46,
    "line": 46,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 37,
    "endLine": 47,
    "line": 47,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 50,
    "line": 50,
    "message": "DBDrawerHeader must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 50,
    "line": 50,
    "message": "DBDrawerHeader must be used inside DBDrawer (in slot "header")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 35,
    "endLine": 51,
    "line": 51,
    "message": "DBCustomSelect must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 54,
    "line": 54,
    "message": "DBDrawer must have a DBDrawerHeader for accessibility (provides close button and aria-labelledby)",
    "messageId": "drawerHeaderRequired",
    "ruleId": "db-ux/drawer-header-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 57,
    "line": 57,
    "message": "DBDrawerHeader must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 57,
    "line": 57,
    "message": "DBDrawerHeader must be used inside DBDrawer (in slot "header")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 58,
    "line": 58,
    "message": "DBDrawerFooter must be used inside DBDrawer (in slot "footer")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 59,
    "line": 59,
    "message": "DBNavigationItem must be used inside DBNavigation or DBNavigationItem (in slot "subNavigation")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 59,
    "line": 59,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 60,
    "line": 60,
    "message": "DBTabList must be used inside DBTabs",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 16,
    "endLine": 63,
    "line": 63,
    "message": "DBTabPanel must be used inside DBTabs",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 17,
    "endLine": 64,
    "line": 64,
    "message": "DBTableHead must be used inside DBTable",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 17,
    "endLine": 69,
    "line": 69,
    "message": "DBTableBody must be used inside DBTable",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 19,
    "endLine": 74,
    "line": 74,
    "message": "DBTableFooter must be used inside DBTable",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 16,
    "endLine": 79,
    "line": 79,
    "message": "DBTableRow must be used inside DBTableHead or DBTableBody or DBTableFooter",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 23,
    "endLine": 82,
    "line": 82,
    "message": "DBTableHeaderCell must be used inside DBTableRow",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 83,
    "line": 83,
    "message": "DBTableDataCell must be used inside DBTableRow",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 20,
    "endLine": 84,
    "line": 84,
    "message": "DBTableCaption must be used inside DBTable (in slot "caption")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 27,
    "endLine": 95,
    "line": 95,
    "message": "DBInput must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 50,
    "endLine": 98,
    "line": 98,
    "message": "DBInput with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 101,
    "line": 101,
    "message": "DBHeader must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "ruleId": "db-ux/header-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 40,
    "endLine": 113,
    "line": 112,
    "message": "DBNavigationItem must be used inside DBNavigation or DBNavigationItem (in slot "subNavigation")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 40,
    "endLine": 113,
    "line": 112,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 40,
    "endLine": 113,
    "line": 112,
    "message": "DBNavigationItem must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 116,
    "line": 116,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 116,
    "line": 116,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 19,
    "endLine": 123,
    "line": 123,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 42,
    "endLine": 128,
    "line": 128,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 29,
    "endLine": 133,
    "line": 133,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 32,
    "endLine": 136,
    "line": 136,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 16,
    "endLine": 140,
    "line": 140,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint React test file > react-fixed 1`] = `
"import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBCustomSelect,
	DBDrawer,
	DBDrawerFooter,
	DBDrawerHeader,
	DBHeader,
	DBIcon,
	DBInput,
	DBLink,
	DBNavigationItem,
	DBNotification,
	DBSelect,
	DBTabItem,
	DBTabList,
	DBTabPanel,
	DBTableBody,
	DBTableCaption,
	DBTableDataCell,
	DBTableFooter,
	DBTableHead,
	DBTableHeaderCell,
	DBTableRow,
	DBTag,
	DBTooltip
} from '@db-ux/react-core-components';

export const TestComponent = () => {
	return (
		<div>
			{/* db-ux/accordion-item-headline-required */}
			<DBAccordionItem></DBAccordionItem>

			{/* db-ux/badge-corner-placement-rules */}
			<DBBadge placement="corner-top-right" label="9999">999</DBBadge>

			{/* db-ux/badge-no-inline-in-interactive */}
			<DBButton type="submit">
				<DBBadge placement="corner-top-right" label="Inline in button">Inl</DBBadge>
			</DBButton>

			{/* db-ux/close-button-text-required */}
			<DBNotification closeable>Test</DBNotification>
			<DBNotification closeable={true}>Test</DBNotification>
			<DBNotification closeable={false}>Test</DBNotification>
			<DBNotification>Test</DBNotification>
			<DBDrawerHeader>Test</DBDrawerHeader>
			<DBCustomSelect label="Select"></DBCustomSelect>

			{/* db-ux/drawer-header-required */}
			<DBDrawer>Content without header</DBDrawer>

			{/* db-ux/sub-component-required-parent */}
			<DBDrawerHeader>Outside drawer</DBDrawerHeader>
			<DBDrawerFooter>Outside drawer</DBDrawerFooter>
			<DBNavigationItem>Outside navigation</DBNavigationItem>
			<DBTabList>
				<DBTabItem>Outside tabs</DBTabItem>
			</DBTabList>
			<DBTabPanel>Outside tabs</DBTabPanel>
			<DBTableHead>
				<DBTableRow>
					<DBTableHeaderCell>H</DBTableHeaderCell>
				</DBTableRow>
			</DBTableHead>
			<DBTableBody>
				<DBTableRow>
					<DBTableDataCell>D</DBTableDataCell>
				</DBTableRow>
			</DBTableBody>
			<DBTableFooter>
				<DBTableRow>
					<DBTableDataCell>F</DBTableDataCell>
				</DBTableRow>
			</DBTableFooter>
			<DBTableRow>
				<DBTableDataCell>Outside section</DBTableDataCell>
			</DBTableRow>
			<DBTableHeaderCell>Outside row</DBTableHeaderCell>
			<DBTableDataCell>Outside row</DBTableDataCell>
			<DBTableCaption>Outside table</DBTableCaption>

			{/* db-ux/button-no-text-requires-tooltip */}
			<DBButton type="submit" noText icon="search">
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/button-type-required */}
			<DBButton type="submit">Missing type</DBButton>
			<DBButton type="button">Valid button</DBButton>

			{/* db-ux/form-label-required */}
			<DBInput type="text" />

			{/* db-ux/form-validation-message-required */}
			<DBInput label="Email" required type="text" />

			{/* db-ux/header-burger-menu-label-required */}
			<DBHeader></DBHeader>

			{/* db-ux/input-type-required */}
			<DBInput label="Test" type="text" />

			{/* db-ux/link-external-security */}
			<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">
				External link
			</DBLink>

			{/* db-ux/navigation-item-back-button-text-required */}
			<DBNavigationItem
				subNavigation={<div>Sub nav</div>}></DBNavigationItem>

			{/* db-ux/no-interactive-tooltip-content */}
			<DBTooltip>
				<DBButton type="submit">Click</DBButton>
			</DBTooltip>

			{/* db-ux/no-nested-accordion */}
			<DBAccordion>
				<DBAccordionItem headlinePlain="Test">
					<DBAccordion></DBAccordion>
				</DBAccordionItem>
			</DBAccordion>

			{/* db-ux/prefer-icon-attribute */}
			<DBButton type="submit" icon="search">
				
			</DBButton>

			{/* db-ux/select-requires-options */}
			<DBSelect label="Select"></DBSelect>

			{/* db-ux/tag-removable-remove-button-required */}
			<DBTag behavior="removable"></DBTag>

			{/* db-ux/tooltip-requires-interactive-parent */}
			<div>
				<DBTooltip>Tooltip without interactive parent</DBTooltip>
			</div>
		</div>
	);
};
"
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-errors 1`] = `
[
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must be used inside DBAccordion",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 50,
    "endLine": 15,
    "line": 15,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 58,
    "endLine": 16,
    "line": 16,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 40,
    "endLine": 19,
    "line": 19,
    "message": "DBDrawerHeader must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 40,
    "endLine": 19,
    "line": 19,
    "message": "DBDrawerHeader must be used inside DBDrawer (in slot "header")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 51,
    "endLine": 20,
    "line": 20,
    "message": "DBCustomSelect must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 46,
    "endLine": 23,
    "line": 23,
    "message": "DBDrawer must have a DBDrawerHeader for accessibility (provides close button and aria-labelledby)",
    "messageId": "drawerHeaderRequired",
    "ruleId": "db-ux/drawer-header-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 50,
    "endLine": 26,
    "line": 26,
    "message": "DBDrawerHeader must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 50,
    "endLine": 26,
    "line": 26,
    "message": "DBDrawerHeader must be used inside DBDrawer (in slot "header")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 50,
    "endLine": 27,
    "line": 27,
    "message": "DBDrawerFooter must be used inside DBDrawer (in slot "footer")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 58,
    "endLine": 28,
    "line": 28,
    "message": "DBNavigationItem must be used inside DBNavigation or DBNavigationItem (in slot "subNavigation")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 58,
    "endLine": 28,
    "line": 28,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 61,
    "endLine": 29,
    "line": 29,
    "message": "DBTabList must be used inside DBTabs",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 40,
    "endLine": 30,
    "line": 30,
    "message": "DBTabPanel must be used inside DBTabs",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 35,
    "line": 31,
    "message": "DBTableHead must be used inside DBTable",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 40,
    "line": 36,
    "message": "DBTableBody must be used inside DBTable",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 45,
    "line": 41,
    "message": "DBTableFooter must be used inside DBTable",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 48,
    "line": 46,
    "message": "DBTableRow must be used inside DBTableHead or DBTableBody or DBTableFooter",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 53,
    "endLine": 49,
    "line": 49,
    "message": "DBTableHeaderCell must be used inside DBTableRow",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 49,
    "endLine": 50,
    "line": 50,
    "message": "DBTableDataCell must be used inside DBTableRow",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 49,
    "endLine": 51,
    "line": 51,
    "message": "DBTableCaption must be used inside DBTable (in slot "caption")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 59,
    "endLine": 54,
    "line": 54,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 26,
    "endLine": 61,
    "line": 61,
    "message": "DBInput must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 49,
    "endLine": 64,
    "line": 64,
    "message": "DBInput with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 24,
    "endLine": 67,
    "line": 67,
    "message": "DBHeader must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "ruleId": "db-ux/header-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 75,
    "fix": {
      "range": [
        2577,
        2577,
      ],
      "text": " referrerPolicy="no-referrer"",
    },
    "line": 73,
    "message": "DBLink with content="external" should have referrerPolicy attribute",
    "messageId": "missingReferrerPolicy",
    "ruleId": "db-ux/link-external-security",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 22,
    "endLine": 80,
    "line": 78,
    "message": "DBNavigationItem must be used inside DBNavigation or DBNavigationItem (in slot "subNavigation")",
    "messageId": "subComponentRequiredParent",
    "ruleId": "db-ux/sub-component-required-parent",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 22,
    "endLine": 80,
    "line": 78,
    "message": "DBNavigationItem must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 85,
    "line": 83,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 91,
    "line": 89,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 32,
    "endLine": 90,
    "line": 90,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 14,
    "endLine": 97,
    "line": 95,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 100,
    "line": 100,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 103,
    "line": 103,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 61,
    "endLine": 107,
    "line": 107,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-fixed 1`] = `
"<template>
	<div>
		<!-- db-ux/accordion-item-headline-required -->
		<DBAccordionItem></DBAccordionItem>

		<!-- db-ux/badge-corner-placement-rules -->
		<DBBadge placement="corner-top-right">9999</DBBadge>

		<!-- db-ux/badge-no-inline-in-interactive -->
		<DBButton type="submit">
			<DBBadge>Inline in button</DBBadge>
		</DBButton>

		<!-- db-ux/close-button-text-required -->
		<DBNotification closeable>Test</DBNotification>
		<DBNotification :closeable="true">Test</DBNotification>
		<DBNotification :closeable="false">Test</DBNotification>
		<DBNotification>Test</DBNotification>
		<DBDrawerHeader>Test</DBDrawerHeader>
		<DBCustomSelect label="Select"></DBCustomSelect>

		<!-- db-ux/drawer-header-required -->
		<DBDrawer>Content without header</DBDrawer>

		<!-- db-ux/sub-component-required-parent -->
		<DBDrawerHeader>Outside drawer</DBDrawerHeader>
		<DBDrawerFooter>Outside drawer</DBDrawerFooter>
		<DBNavigationItem>Outside navigation</DBNavigationItem>
		<DBTabList><DBTabItem>Outside tabs</DBTabItem></DBTabList>
		<DBTabPanel>Outside tabs</DBTabPanel>
		<DBTableHead
			><DBTableRow
				><DBTableHeaderCell>H</DBTableHeaderCell></DBTableRow
			></DBTableHead
		>
		<DBTableBody
			><DBTableRow
				><DBTableDataCell>D</DBTableDataCell></DBTableRow
			></DBTableBody
		>
		<DBTableFooter
			><DBTableRow
				><DBTableDataCell>F</DBTableDataCell></DBTableRow
			></DBTableFooter
		>
		<DBTableRow
			><DBTableDataCell>Outside section</DBTableDataCell></DBTableRow
		>
		<DBTableHeaderCell>Outside row</DBTableHeaderCell>
		<DBTableDataCell>Outside row</DBTableDataCell>
		<DBTableCaption>Outside table</DBTableCaption>

		<!-- db-ux/button-no-text-requires-tooltip -->
		<DBButton type="submit" noText icon="search"></DBButton>

		<!-- db-ux/button-type-required -->
		<DBButton type="submit">Missing type</DBButton>
		<DBButton type="button">Valid button</DBButton>

		<!-- db-ux/form-label-required -->
		<DBInput type="text" />

		<!-- db-ux/form-validation-message-required -->
		<DBInput label="Email" required type="text" />

		<!-- db-ux/header-burger-menu-label-required -->
		<DBHeader></DBHeader>

		<!-- db-ux/input-type-required -->
		<DBInput label="Test" type="text" />

		<!-- db-ux/link-external-security -->
		<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer"
			>External link</DBLink
		>

		<!-- db-ux/navigation-item-back-button-text-required -->
		<DBNavigationItem>
			<template #subNavigation>Sub nav</template>
		</DBNavigationItem>

		<!-- db-ux/no-interactive-tooltip-content -->
		<DBTooltip>
			<DBButton type="submit">Click</DBButton>
		</DBTooltip>

		<!-- db-ux/no-nested-accordion -->
		<DBAccordion>
			<DBAccordionItem headlinePlain="Test">
				<DBAccordion></DBAccordion>
			</DBAccordionItem>
		</DBAccordion>

		<!-- db-ux/prefer-icon-attribute -->
		<DBButton type="submit" icon="search">
			
		</DBButton>

		<!-- db-ux/select-requires-options -->
		<DBSelect label="Select"></DBSelect>

		<!-- db-ux/tag-removable-remove-button-required -->
		<DBTag behavior="removable"></DBTag>

		<!-- db-ux/tooltip-requires-interactive-parent -->
		<div>
			<DBTooltip>Tooltip without interactive parent</DBTooltip>
		</div>
	</div>
</template>

<script setup lang="ts">
import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBCustomSelect,
	DBDrawer,
	DBDrawerFooter,
	DBDrawerHeader,
	DBHeader,
	DBIcon,
	DBInput,
	DBLink,
	DBNavigationItem,
	DBNotification,
	DBSelect,
	DBTabItem,
	DBTabList,
	DBTabPanel,
	DBTableBody,
	DBTableCaption,
	DBTableDataCell,
	DBTableFooter,
	DBTableHead,
	DBTableHeaderCell,
	DBTableRow,
	DBTag,
	DBTooltip
} from "@db-ux/v-core-components";
</script>
"
`;
